# starspan

./: BUILD.windows.txt  COPYING  ChangeLog  DEVNOTES.txt  INSTALL  INSTALL.txt  Makefile  Makefile.am  Makefile.in  Makefile.props.fink  Makefile.props.templ  NEWS  README  README.txt  THANKS  VERSION  configure  configure.in  copyright.txt  jts.h  mksrcdist.sh  mksrcdist.sh.in  starpan.in  starspan  starspan.h  starspan.in  starspan1.cc  starspan2.cc  starspan_csv.cc  starspan_csv_raster_field.cc  starspan_db.cc  starspan_dump.cc  starspan_gen_envisl.cc  starspan_jtstest.cc  starspan_miniraster_strip.cc  starspan_minirasters.cc  starspan_stats.cc  starspan_tuct1.cc  starspan_tuct2.cc  starspan_update_csv.cc  (+3 more)
binaries/windows/: BUILD.windows.txt  DEVNOTES.txt  build.properties  build.xml  izinstall.xml  izshortcut.xml  mingw_prepare_binaries.sh
binaries/windows/base_dist/: README.txt
csv/: Csv.cc  Csv.h
doc/: srccontents.txt
doc/design/: Makefile  classdiagram.java
doc/paper/: Makefile  starspan.bib  starspan.tex
gui/: DEVNOTES.txt  build.properties  build.xml  izinstall.xml  izshortcut.xml
gui/base_dist/: README.txt
java/: README.txt  build.xml
java/old/: README.txt  Rasterizer.java  ShapeViewer.java
java/src/starspan/tools/: Prototype1.java  ShapeViewer.java
jts/: jts.cc  jts.h
libtests/: README.txt
libtests/gdal/: README.txt  gdalinfo.cc  rasteriotest.cc
libtests/java/: README.txt  build.xml
libtests/java/src/starspan/tools/: PolygonizerTest.java  Prototype1.java  ShapeDump.java  ShapeViewer.java
libtests/ogr/: ogrinfo.cpp
libtests/shp/: shpdump.cc
polygon/: Makefile  Polygon.cc  Polygon.h
raster/: Makefile  Raster.h  Raster_gdal.cc
rasterizers/: LineRasterizer.cc  rasterizers.h  test.cc
src/: common.h  starspan.h  starspan2.cc  starspan_countbyclass.cc  starspan_csv.cc  starspan_csv2.cc  starspan_csv_dup_pixel.cc  starspan_csv_raster_field.cc  starspan_db.cc  starspan_dump.cc  starspan_dup_pixel.cc  starspan_gen_envisl.cc  starspan_grass.cc  starspan_jtstest.cc  starspan_miniraster_strip.cc  starspan_minirasters.cc  starspan_minirasters2.cc  starspan_minirasterstrip.cc  starspan_minirasterstrip2.cc  starspan_rasterize.cc  starspan_stats.cc  starspan_tuct1.cc  starspan_tuct2.cc  starspan_update_csv.cc  starspan_util.cc
src/csv/: Csv.h  CsvOutput.cc
src/etc/: dumppoints.cc  starspan.extractpoints.cc
src/raster/: Makefile  Raster.h  Raster_gdal.cc
src/rasterizers/: LayerRasterizer.cc  LayerRasterizer.h  LineRasterizer.cc  Makefile  layertest.cc  test.cc
src/stats/: Stats.cc  Stats.h
src/traverser/: pixset.cc  polyqt.cc  traverser.cc  traverser.h
src/util/: Progress.h
src/vector/: Makefile  Vector.h  Vector_ogr.cc  Vector_shapelib.cc
stats/: Stats.cc  Stats.h
test_shp/: README.txt
tests/: Makefile  run_tests.sh
tests/data/raster/: starspan2raster.hdr  starspan3raster.img
tests/misc/: create_file.cc
tests/misc/LFS/: Makefile  README.txt  create_big_file.cc  lfs.h  lfstest.cc
traverser/: traverser.cc  traverser.h
util/: Progress.cc  Progress.h  test.cc
vector/: Makefile  Vector.h  Vector_ogr.cc
